--- a/src/app/components/post-details/post-details.component.html
+++ b/src/app/components/post-details/post-details.component.html
@@ -1,8 +1,10 @@
+
 <div class="modal">
     <h3>Comments</h3>
     <div *ngFor="let comment of comments">
       <p><strong>{{ comment.name }}</strong>: {{ comment.body }}</p>
       <p>By: {{ comment.email }}</p>
     </div>
-  </div>
+    <button class="close-btn" (click)="onClose()">Close</button>
+</div>
   
